2005-06-10  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: added Ruby/Libart2 to depend packages.

	* src/rbgp-gnome-print.c (gp_concat): use Art::Affine instead of
	  an array.
	
	* src/rbgp-gnome-print.c (gp_context_pages): added for convenience.

	* src/rbgp-gnome-print.c (gp_context_new): argument config is
	  optional.

2005-06-09  Kouhei Sutou  <kou@cozmixng.org>

	* sample/to_file.rb (Renderer#draw): use block.

	* src/rbgp-gnome-print-unit.c (gp_convert_distance_full): added
	  `_' between variable name.

	* src/rbgp-gnome-print-paper.c (gp_paper_get_generic): fixed
	  optional argument detecting.

2005-06-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print-job.c (gp_job_print_to_file): supported nil.

	* src/rbgp-gnome-print-job.c (gp_job_get_page_size, gp_job_new):
	  checked return value.

	* src/rbgp-gnome-print-config.c (gp_config_get_page_size): checked
	  return value of gnome_print_config_get_page_size().

	* sample/to_file.rb (Renderer#draw_image_by_convenience): added
	  sample for Gnome::PrintContext#image.

	* sample/to_file.rb (Renderer#draw_image_by_low_level_api): added
	  sample for Gnome::PrintContext#*_image.

	* src/lib/gnomeprint2.rb (Gnome::PrintContext#image): added
	  callback for customize context.

	* sample/to_file.rb (Renderer#draw_image): use
	  Gnome::PrintContext#image instead of using
	  Gnome::PrintContext#rgb_image and Gnome::PrintContext#rgba_image
	  directory.

	* src/lib/gnomeprint2.rb (Gnome::PrintContext#image): added for
	  convenience.

	* sample/to_file.rb (Renderer#draw_line): added sample of
	  Gnome::PrintContext#set_dash.

	* sample/to_file.rb (Renderer#draw_rectangle, Renderer#draw_line):
	  added sample of Gnome::PrintContext#line_cap= and
	  Gnome::PrintContext#line_join=.

	* src/rbgp-gnome-print.c (gp_setfont, gp_glyphlist, RVAL2CONST_GF):
	  removed. use Pango instead of them.

2005-06-07  Kouhei Sutou  <kou@cozmixng.org>

	* sample/to_file.rb (Renderer#draw_concat): added concat() sample.
