@@ -1,5 +1,8 @@
 2005-06-10  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgp.h: showed Gnome::PrintUnitBase <-> Ruby object
+	  conversion macro to the public.
+
 	* extconf.rb: added Ruby/Libart2 to depend packages.
 
 	* src/rbgp-gnome-print.c (gp_concat): use Art::Affine instead of
